--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                                         <input type="text" class="form-control" id="endYear" placeholder="">
                                     </div>
                                    
-                                    <button type="submit" class="btn btn-primary">Submit</button>
-                                    <button type="submit" class="btn btn-primary">Clear</button>
+                                    <button type="submit" class="btn btn-primary" id="searchBtn">Search</button>
+                                    <button type="submit" class="btn btn-primary" id="clearBtn">Clear Results</button>
                                 </form>
                         </div>
 
