--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 
     <!-- bootstrap -->
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -32,7 +33,7 @@
                             <form>
                                 <div class="form-group">
                                     <label>Search Term:</label>
-                                    <input type="text" class="form-control" id="searchTerm" aria-describedby="emailHelp" placeholder="">
+                                    <input type="text" class="form-control" id="searchTerm" aria-describedby="emailHelp" value = "something" placeholder="">
                                     
                                 </div>
                                 <div class="form-group">
@@ -73,7 +74,8 @@
 
 
     </div>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="Assets/JS/app.js"></script>
 </body>
 
 </html>
